--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.11.1",
     "@react-navigation/native": "5.8.8",
+    "@react-navigation/stack": "^5.12.5",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
