--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeProject",
+  "name": "SalmonApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,12 +14,18 @@
     "@react-navigation/drawer": "^5.11.1",
     "@react-navigation/native": "5.8.8",
     "@react-navigation/stack": "^5.12.5",
+    "base-64": "^1.0.0",
+    "firebase": "^8.1.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-input-spinner": "^1.3.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-paper": "^4.4.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.13.0"
+    "react-native-screens": "^2.13.0",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
