--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-input-spinner": "^1.3.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-paper": "^4.4.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
