--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/stack": "^5.12.5",
     "base-64": "^1.0.0",
     "firebase": "^8.1.1",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-input-spinner": "^1.3.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
